# omni-token-economy

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
benchmarks/: run.ts
docs/: compliance.md
src/py/omni_token_economy/: __init__.py  compact.py  estimate.py  redundancy.py  timestamps.py  types.py
src/ts/: compact.ts  estimate.ts  index.ts  redundancy.ts  timestamps.ts  types.ts
tests/py/: test_compact.py
tests/ts/: compact.test.ts
