[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-token-economy"
version = "0.1.0"
description = "Biblioteca universal de compactação de tokens para aplicações LLM. Zero lock-in de backend."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "OmniForge", email = "jesse.freitas@omniforge.com.br" },
]
keywords = ["llm", "tokens", "compact", "claude", "openai", "compression", "context", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jessefreitas/omni-token-economy"
Repository = "https://github.com/jessefreitas/omni-token-economy.git"
Issues = "https://github.com/jessefreitas/omni-token-economy/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py/omni_token_economy"]

[tool.pytest.ini_options]
testpaths = ["tests/py"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
